--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "request": "^2.47.0",
     "serve-favicon": "^2.2.0",
     "socket.io": "^1.2.1",
-    "socket.io-client": "^2.2.0",
-    "underscore": "^2.11.2"
+    "socket.io-client": "^2.2.0"
   }
 }
